syntax = "proto3";

package proto;
option go_package = "proto";

message UserRequest {
    uint64 user_id = 1;
}

message UserResponse {
    uint64 user_id = 1;
    string username = 2;
    string nickname = 3;
}

service DemoService {
    rpc UserInfo(UserRequest) returns (UserResponse);
}